--- a/employee-service.properties
+++ b/employee-service.properties
@@ -5,3 +5,5 @@ spring.datasource.password=Cbz@4420
 spring.jpa.hibernate.ddl-auto=update
 Server.port=8081
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.boot.message=Hello,Employee Service
